--- a/index.html
+++ b/index.html
@@ -36,9 +36,6 @@
               <li class="group"> 
                 <a href="#blog" class= "text-base text-dark py-2 mx-8 flex group-hover:text-primary dark:text-white">Blog</a>
               </li>
-              <li class="group"> 
-                <a href="#contacts" class= "text-base text-dark py-2 mx-8 flex group-hover:text-primary dark:text-white">Contacts</a>
-              </li>
               <li class="mt-3 flex items-center pl-8 ">
                 <div class="flex">
                   <span class="mr-2 text-sm text-slate-500">light</span>
@@ -209,7 +206,8 @@
    </section>
    <!--Blog End-->
 
-   <!--Contacts Start-->
+   <!--Contacts Start
+    
    <section id="contacts" class="p-36 pb-32 bg-slate-100 dark:bg-dark">
     <div class="container">
       <div class="w-full px-4">
@@ -241,7 +239,7 @@
       </div>
     </div>
    </section>
-   <!--Contacts End-->
+ Contacts End-->
 
    <!--Footer Start-->
    <footer class="bg-dark pt-24 pb-12 dark:bg-slate-900">
