--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8"> 
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>fhmfuadi</title>
+    <title>Blog Kiambek</title>
     <link rel="stylesheet" href="dist/output.css">
 </head>
 <body>
@@ -36,6 +36,9 @@
               <li class="group"> 
                 <a href="#blog" class= "text-base text-dark py-2 mx-8 flex group-hover:text-primary dark:text-white">Blog</a>
               </li>
+              <!-- <li class="group"> 
+                <a href="#contacts" class= "text-base text-dark py-2 mx-8 flex group-hover:text-primary dark:text-white">Contacts</a>
+              </li> -->
               <li class="mt-3 flex items-center pl-8 ">
                 <div class="flex">
                   <span class="mr-2 text-sm text-slate-500">light</span>
@@ -65,7 +68,7 @@
                  font-bold text-dark text-5xl dark:text-white">Fahmi Miftakhul Fuadi</span></h1>
             <h2 class="font-medium text-dark text-lg mb-5 lg:text-2xl dark:text-white">Students & Workers</h2>
             <p class="font-medium text-secondary mb-10 leading-relaxed ">Kerja sambil kuliah, bukan kuliah sambil. <span class="font-semibold text-primary dark:text-white">Kerja !</span></p>
-            <a href="https://api.whatsapp.com/send?phone=6283124537371" target="_blank" class="text-base font-semibold text-white bg-primary py-3 px-8 rounded-full hover:drop-shadow-lg hover:opacity-90">WA aja !</a>
+            <a href="https://api.whatsapp.com/send?phone=6283124537371" target="_blank" class="text-base font-semibold text-white bg-primary py-3 px-8 rounded-full hover:drop-shadow-lg hover:opacity-90">WA Aja !</a>
           </div> 
           <div class="w-full self-end px-4 lg:w-1/2">
             <div class="relative mt-10 lg:mt-9 lg:right-0">
@@ -88,22 +91,16 @@
       <div class="flex flex-wrap">
         <div class="w-full px-4 mb-10 lg:w-1/2">
           <h4 class="font-bold uppercase text-primary text-lg mb-3">Tentang Saya</h4>
-          <h2 class="font-bold text-dark text-3xl mb-5 max-w-md lg:text-4xl  dark:text-white">Sokin !!!</h2>
-          <p class="font-medium text-base text-secondary max-w-xl lg:text-lg">Asal dari Cirebon, mulai merantau 2017 di sekitar kawasan Cikupa lalu saat ini tinggal di Cisarua, sudah banyak melalui kehidupan pahit jadi jangan sungkan-sungkan buat sharing pengalaman.
-            
-          </p>
+          <h2 class="font-bold text-dark text-3xl mb-5 max-w-md lg:text-4xl  dark:text-white">Sokin !</h2>
+          <p class="font-medium text-base text-secondary max-w-xl lg:text-lg">Asal dari Cirebon, mulai merantau 2017 di sekitar kawasan Cikupa lalu saat ini tinggal di Cisarua, sudah banyak melalui kehidupan pahit jadi jangan sungkan-sungkan buat sharing pengalaman.</p>
         </div>
         <div class="w-full px-4 lg:w-1/2">
           <h3 class="font-semibold text-dark text-2xl mb-4 lg:text-3xl lg:pt-10  dark:text-white">Mari berteman</h3>
           <p class="font-medium text-base text-secondary mb-6 lg:text-lg">Orangnya kebanyakan diem sih, tapi tergantung lawan bicaranya kalo lawannya asik gw juga bisa asik kok jadi jangan khawatir dicuekin, tapi jangan sekali-sekali nanya loker sama gaji berapa itu aja sih</p>
           <div class="flex items-center">
             <!--instagram-->
-            <a href="https://instagram.com/fuadifhm?igshid=NTc4MTIwNjQ2YQ==" target="_blank" class="w-9 h-9 mr-3 rounded-full flex justify-center items-center border border-slate-300 text-slate-300 hover:border-primary hover:bg-primary hover:text-white">
-              <svg role="img" width="20" class="fill-current" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><title>Instagram</title><path d="M12 0C8.74 0 8.333.015 7.053.072 5.775.132 4.905.333 4.14.63c-.789.306-1.459.717-2.126 1.384S.935 3.35.63 4.14C.333 4.905.131 5.775.072 7.053.012 8.333 0 8.74 0 12s.015 3.667.072 4.947c.06 1.277.261 2.148.558 2.913.306.788.717 1.459 1.384 
-                2.126.667.666 1.336 1.079 2.126 1.384.766.296 1.636.499 2.913.558C8.333 23.988 8.74 24 12 24s3.667-.015 4.947-.072c1.277-.06 2.148-.262 2.913-.558.788-.306 1.459-.718 2.126-1.384.666-.667 1.079-1.335 1.384-2.126.296-.765.499-1.636.558-2.913.06-1.28.072-1.687.072-4.947s-.015-3.667-.072-4.947c-.06-1.277-.262-2.149-.558-2.913-.306-.789-.718-1.459-1.384-2.126C21.319 1.347 
-                20.651.935 19.86.63c-.765-.297-1.636-.499-2.913-.558C15.667.012 15.26 0 12 0zm0 2.16c3.203 0 3.585.016 4.85.071 1.17.055 1.805.249 2.227.415.562.217.96.477 1.382.896.419.42.679.819.896 1.381.164.422.36 1.057.413 2.227.057 1.266.07 1.646.07 4.85s-.015 3.585-.074 4.85c-.061 1.17-.256 1.805-.421 2.227-.224.562-.479.96-.899 1.382-.419.419-.824.679-1.38.896-.42.164-1.065.36-2.235.413-1.274.057-1.649.07-4.859.07-3.211 
-                0-3.586-.015-4.859-.074-1.171-.061-1.816-.256-2.236-.421-.569-.224-.96-.479-1.379-.899-.421-.419-.69-.824-.9-1.38-.165-.42-.359-1.065-.42-2.235-.045-1.26-.061-1.649-.061-4.844 0-3.196.016-3.586.061-4.861.061-1.17.255-1.814.42-2.234.21-.57.479-.96.9-1.381.419-.419.81-.689 1.379-.898.42-.166 1.051-.361 2.221-.421 1.275-.045 1.65-.06 4.859-.06l.045.03zm0 
-                3.678c-3.405 0-6.162 2.76-6.162 6.162 0 3.405 2.76 6.162 6.162 6.162 3.405 0 6.162-2.76 6.162-6.162 0-3.405-2.76-6.162-6.162-6.162zM12 16c-2.21 0-4-1.79-4-4s1.79-4 4-4 4 1.79 4 4-1.79 4-4 4zm7.846-10.405c0 .795-.646 1.44-1.44 1.44-.795 0-1.44-.646-1.44-1.44 0-.794.646-1.439 1.44-1.439.793-.001 1.44.645 1.44 1.439z"/></svg>
+            <a href="#about" class="w-9 h-9 mr-3 rounded-full flex justify-center items-center border border-slate-300 text-slate-300 hover:border-primary hover:bg-primary hover:text-white">
+              <svg role="img" width="20" class="fill-current" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><title>Instagram</title><path d="M12 0C8.74 0 8.333.015 7.053.072 5.775.132 4.905.333 4.14.63c-.789.306-1.459.717-2.126 1.384S.935 3.35.63 4.14C.333 4.905.131 5.775.072 7.053.012 8.333 0 8.74 0 12s.015 3.667.072 4.947c.06 1.277.261 2.148.558 2.913.306.788.717 1.459 1.384 2.126.667.666 1.336 1.079 2.126 1.384.766.296 1.636.499 2.913.558C8.333 23.988 8.74 24 12 24s3.667-.015 4.947-.072c1.277-.06 2.148-.262 2.913-.558.788-.306 1.459-.718 2.126-1.384.666-.667 1.079-1.335 1.384-2.126.296-.765.499-1.636.558-2.913.06-1.28.072-1.687.072-4.947s-.015-3.667-.072-4.947c-.06-1.277-.262-2.149-.558-2.913-.306-.789-.718-1.459-1.384-2.126C21.319 1.347 20.651.935 19.86.63c-.765-.297-1.636-.499-2.913-.558C15.667.012 15.26 0 12 0zm0 2.16c3.203 0 3.585.016 4.85.071 1.17.055 1.805.249 2.227.415.562.217.96.477 1.382.896.419.42.679.819.896 1.381.164.422.36 1.057.413 2.227.057 1.266.07 1.646.07 4.85s-.015 3.585-.074 4.85c-.061 1.17-.256 1.805-.421 2.227-.224.562-.479.96-.899 1.382-.419.419-.824.679-1.38.896-.42.164-1.065.36-2.235.413-1.274.057-1.649.07-4.859.07-3.211 0-3.586-.015-4.859-.074-1.171-.061-1.816-.256-2.236-.421-.569-.224-.96-.479-1.379-.899-.421-.419-.69-.824-.9-1.38-.165-.42-.359-1.065-.42-2.235-.045-1.26-.061-1.649-.061-4.844 0-3.196.016-3.586.061-4.861.061-1.17.255-1.814.42-2.234.21-.57.479-.96.9-1.381.419-.419.81-.689 1.379-.898.42-.166 1.051-.361 2.221-.421 1.275-.045 1.65-.06 4.859-.06l.045.03zm0 3.678c-3.405 0-6.162 2.76-6.162 6.162 0 3.405 2.76 6.162 6.162 6.162 3.405 0 6.162-2.76 6.162-6.162 0-3.405-2.76-6.162-6.162-6.162zM12 16c-2.21 0-4-1.79-4-4s1.79-4 4-4 4 1.79 4 4-1.79 4-4 4zm7.846-10.405c0 .795-.646 1.44-1.44 1.44-.795 0-1.44-.646-1.44-1.44 0-.794.646-1.439 1.44-1.439.793-.001 1.44.645 1.44 1.439z"/></svg>
             </a>
 
               <!--linkedin-->
@@ -150,7 +147,7 @@
    <!--Portfolio Section End-->
 
    <!--Blog Start-->
-   <sect id="blog" class="p-36 pb-32 dark:bg-dark">
+   <section id="blog" class="p-36 pb-32 dark:bg-dark">
     <div class="container">
       <div class="w-full px-4">
         <div class="w-full px-4">
@@ -160,61 +157,60 @@
             <p class="font-medium text-md text-secondary">tapi jarang nulis juga jarang ngetik, sibuk nyari duit bae orangnye </p>
           </div>
         </div>
-        <div class="flex flex-wrap">
-          <div class="w-full px-4 lg:w-1/2 xl:w-1/3">
-            <div class="bg-white rounded-xl shadow-lg overflow-hidden mb-10 dark:bg-slate-800">
-              <img src="https://source.unsplash.com/360x200?goverment" alt="goverment" class="w-full">
-              <div class="py-8 px-6">
-                <h3>
-                  <a href="blog/blog-details.html" class="block mb-3 font-semibold text-xl text-dark hover:text-primary truncate dark:text-white">Rangkuman Tugas Komputer Masyarakat</a>
-                </h3>
-                <p class="font-medium text-base text-secondary mb-6">E-Government mewujudkan transformasi digital dalam pemerintahan, menyediakan aksesibilitas yang lebih baik, efisiensi operasional, dan pelayanan publik yang lebih cepat melalui penggunaan teknologi informasi dan komunikasi yang inovatif.</p>
-                <a href="blog/blog-details.html" class="font-medium text-sm text-white bg-primary py-2 px-4 rounded-lg hover:opacity-80">Baca Selengkapnya ></a>
-              </div>
+      </div>
+
+      <div class="flex flex-wrap">
+        <div class="w-full px-4 lg:w-1/2 xl:w-1/3">
+          <div class="bg-white rounded-xl shadow-lg overflow-hidden mb-10 dark:bg-slate-800">
+            <img src="https://source.unsplash.com/360x200?goverment" alt="goverment" class="w-full">
+            <div class="py-8 px-6">
+              <h3>
+                <a href="blog/blog-details.html" class="block mb-3 font-semibold text-xl text-dark hover:text-primary truncate dark:text-white">Rangkuman Tugas Komputer Masyarakat</a>
+              </h3>
+              <p class="font-medium text-base text-secondary mb-6">E-Government mewujudkan transformasi digital dalam pemerintahan, menyediakan aksesibilitas yang lebih baik, efisiensi operasional, dan pelayanan publik yang lebih cepat melalui penggunaan teknologi informasi dan komunikasi yang inovatif.</p>
+              <a href="blog/blog-details.html" class="font-medium text-sm text-white bg-primary py-2 px-4 rounded-lg hover:opacity-80">Baca Selengkapnya ></a>
             </div>
           </div>
-  
-          <div class="w-full px-4 lg:w-1/2 xl:w-1/3">
-            <div class="bg-white rounded-xl shadow-lg overflow-hidden mb-10 dark:bg-slate-800">
-              <img src="https://source.unsplash.com/360x200?construction" alt="goverment" class="w-full">
-              <div class="py-8 px-6">
-                <h3>
-                  <a href="#blog" class="block mb-3 font-semibold text-xl text-dark hover:text-primary truncate dark:text-white">Pelaksanaan Workshop Teknologi Konstruksi</a>
-                </h3>
-                <p class="font-medium text-base text-secondary mb-6">Pelatihan teknologi konstruksi memberikan keterampilan dan pengetahuan yang diperlukan untuk memanfaatkan inovasi teknologi terbaru dalam industri konstruksi, meningkatkan produktivitas, keefektifan, dan kualitas dalam proses konstruksi.</p>
-                <a href="#blog" class="font-medium text-sm text-white bg-primary py-2 px-4 rounded-lg hover:opacity-80">Belum ada konten ></a>
-              </div>
+        </div>
+
+        <div class="w-full px-4 lg:w-1/2 xl:w-1/3">
+          <div class="bg-white rounded-xl shadow-lg overflow-hidden mb-10 dark:bg-slate-800">
+            <img src="https://source.unsplash.com/360x200?construction" alt="goverment" class="w-full">
+            <div class="py-8 px-6">
+              <h3>
+                <a href="#blog" class="block mb-3 font-semibold text-xl text-dark hover:text-primary truncate dark:text-white">Pelaksanaan Workshop Teknologi Konstruksi</a>
+              </h3>
+              <p class="font-medium text-base text-secondary mb-6">Pelatihan teknologi konstruksi memberikan keterampilan dan pengetahuan yang diperlukan untuk memanfaatkan inovasi teknologi terbaru dalam industri konstruksi, meningkatkan produktivitas, keefektifan, dan kualitas dalam proses konstruksi.</p>
+              <a href="#blog" class="font-medium text-sm text-white bg-primary py-2 px-4 rounded-lg hover:opacity-80">Belum ada artikel></a>
             </div>
           </div>
-  
-          <div class="w-full px-4 lg:w-1/2 xl:w-1/3">
-            <div class="bg-white rounded-xl shadow-lg overflow-hidden mb-10 dark:bg-slate-800">
-              <img src="https://source.unsplash.com/360x200?workgroup" alt="student" class="w-full">
-              <div class="py-8 px-6">
-                <h3>
-                  <a href="#blog" class="block mb-3 font-semibold text-xl text-dark hover:text-primary truncate dark:text-white">Pelaksanaan Asessment HSE TL</a>
-                </h3>
-                <p class="font-medium text-base text-secondary mb-6">Asesmen HSE (Kesehatan, Keselamatan, dan Lingkungan) merupakan proses penting yang memastikan kepatuhan terhadap standar keselamatan dan perlindungan lingkungan, serta meningkatkan budaya keselamatan di tempat kerja melalui evaluasi yang komprehensif dan tindakan perbaikan yang sesuai.</p>
-                <a href="#blog" class="font-medium text-sm text-white bg-primary py-2 px-4 rounded-lg hover:opacity-80">Belum ada koneten ></a>
-              </div>
+        </div>
+
+        <div class="w-full px-4 lg:w-1/2 xl:w-1/3">
+          <div class="bg-white rounded-xl shadow-lg overflow-hidden mb-10 dark:bg-slate-800">
+            <img src="https://source.unsplash.com/360x200?workgroup" alt="student" class="w-full">
+            <div class="py-8 px-6">
+              <h3>
+                <a href="#blog" class="block mb-3 font-semibold text-xl text-dark hover:text-primary truncate dark:text-white">Pelaksanaan Asessment HSE TL</a>
+              </h3>
+              <p class="font-medium text-base text-secondary mb-6">Asesmen HSE (Kesehatan, Keselamatan, dan Lingkungan) merupakan proses penting yang memastikan kepatuhan terhadap standar keselamatan dan perlindungan lingkungan, serta meningkatkan budaya keselamatan di tempat kerja melalui evaluasi yang komprehensif dan tindakan perbaikan yang sesuai.</p>
+              <a href="#blog" class="font-medium text-sm text-white bg-primary py-2 px-4 rounded-lg hover:opacity-80">Belum ada artikel ></a>
             </div>
           </div>
-    </div>
-  </div>
- </section>
+        </div>
+      </div>
     </div>
    </section>
    <!--Blog End-->
 
-   <!--Contacts Start
-    
-   <section id="contacts" class="p-36 pb-32 bg-slate-100 dark:bg-dark">
+   <!--Contacts Start-->
+   <!-- <section id="contacts" class="p-36 pb-32 bg-slate-100 dark:bg-dark">
     <div class="container">
       <div class="w-full px-4">
         <div class="max-w-lg mx-auto text-center mb-16">
           <h4 class="font-semibold text-lg text-primary mb-2">Contacts</h4>
           <h2 class="font-bold text-dark text-3xl mb-4 dark:text-white">Hubungi Saya</h2>
-          <p class="font-medium text-md text-secondary">Untuk saat ini fungsi formulir masih belum aktif yaa...</p>
+          <p class="font-medium text-md text-secondary">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente quos officiis optio. </p>
         </div>
       </div>
       <form>
@@ -238,8 +234,8 @@
       </form>
       </div>
     </div>
-   </section>
- Contacts End-->
+   </section> -->
+   <!--Contacts End-->
 
    <!--Footer Start-->
    <footer class="bg-dark pt-24 pb-12 dark:bg-slate-900">
@@ -284,9 +280,9 @@
             <li>
               <a href="#blog" class="inline-block text-base hover:text-primary mb-2">Blog</a>
             </li>
-            <li>
+            <!-- <li>
               <a href="#contacts" class="inline-block text-base hover:text-primary mb-2">Contacts</a>
-            </li>
+            </li> -->
           </ul>
         </div>
       </div>
@@ -298,7 +294,7 @@
             <svg role="img" width="20" class="fill-current" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><title>Instagram</title><path d="M12 0C8.74 0 8.333.015 7.053.072 5.775.132 4.905.333 4.14.63c-.789.306-1.459.717-2.126 1.384S.935 3.35.63 4.14C.333 4.905.131 5.775.072 7.053.012 8.333 0 8.74 0 12s.015 3.667.072 4.947c.06 1.277.261 2.148.558 2.913.306.788.717 1.459 1.384 2.126.667.666 1.336 1.079 2.126 1.384.766.296 1.636.499 2.913.558C8.333 23.988 8.74 24 12 24s3.667-.015 4.947-.072c1.277-.06 2.148-.262 2.913-.558.788-.306 1.459-.718 2.126-1.384.666-.667 1.079-1.335 1.384-2.126.296-.765.499-1.636.558-2.913.06-1.28.072-1.687.072-4.947s-.015-3.667-.072-4.947c-.06-1.277-.262-2.149-.558-2.913-.306-.789-.718-1.459-1.384-2.126C21.319 1.347 20.651.935 19.86.63c-.765-.297-1.636-.499-2.913-.558C15.667.012 15.26 0 12 0zm0 2.16c3.203 0 3.585.016 4.85.071 1.17.055 1.805.249 2.227.415.562.217.96.477 1.382.896.419.42.679.819.896 1.381.164.422.36 1.057.413 2.227.057 1.266.07 1.646.07 4.85s-.015 3.585-.074 4.85c-.061 1.17-.256 1.805-.421 2.227-.224.562-.479.96-.899 1.382-.419.419-.824.679-1.38.896-.42.164-1.065.36-2.235.413-1.274.057-1.649.07-4.859.07-3.211 0-3.586-.015-4.859-.074-1.171-.061-1.816-.256-2.236-.421-.569-.224-.96-.479-1.379-.899-.421-.419-.69-.824-.9-1.38-.165-.42-.359-1.065-.42-2.235-.045-1.26-.061-1.649-.061-4.844 0-3.196.016-3.586.061-4.861.061-1.17.255-1.814.42-2.234.21-.57.479-.96.9-1.381.419-.419.81-.689 1.379-.898.42-.166 1.051-.361 2.221-.421 1.275-.045 1.65-.06 4.859-.06l.045.03zm0 3.678c-3.405 0-6.162 2.76-6.162 6.162 0 3.405 2.76 6.162 6.162 6.162 3.405 0 6.162-2.76 6.162-6.162 0-3.405-2.76-6.162-6.162-6.162zM12 16c-2.21 0-4-1.79-4-4s1.79-4 4-4 4 1.79 4 4-1.79 4-4 4zm7.846-10.405c0 .795-.646 1.44-1.44 1.44-.795 0-1.44-.646-1.44-1.44 0-.794.646-1.439 1.44-1.439.793-.001 1.44.645 1.44 1.439z"/></svg>
           </a>
             <!--linkedin-->
-          <a href="#" target="_blank" class="w-9 h-9 mr-3 rounded-full flex justify-center items-center border border-slate-300 text-slate-300 hover:border-primary hover:bg-primary hover:text-white">
+          <a href="https://id.linkedin.com/in/fahmi-miftakhul-fuadi-23357b183" target="_blank" class="w-9 h-9 mr-3 rounded-full flex justify-center items-center border border-slate-300 text-slate-300 hover:border-primary hover:bg-primary hover:text-white">
             <svg role="img" width="20" class="fill-current" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><title>LinkedIn</title><path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"/></svg>
           </a>
         </div>
